--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{ page.title | default: site.title }}</title>
+    {% include styles.html %}
   </head>
   <body>
-    {{ content }}
+    {% include header.html %} {% include navbar.html %} {{ content }} {% include
+    footer.html %} {% include scripts.html %}
   </body>
 </html>
